--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Tic-Tac-Toe</h1>
+    <p class="subtext"><span class="player-name">Player 1</span>, make your move.</p>
+    <main class="gameboard">
+        <div class="cells"></div>
+    </main>
 </body>
 </html>
